--- a/templates/question.html
+++ b/templates/question.html
@@ -11,10 +11,15 @@
         <input
             type="radio"
             name="answer"
-            value="value-goes-here">
+            value="{{choice}}">
         {{choice}}
       </p>
       {% endfor %}
+
+      <input
+        type="hidden"
+        name = "question_num"
+        value = "{{question_num}}">
 
     <button>Continue</button>
   </form>
