bug fix to clear responses

--- a/templates/question.html
+++ b/templates/question.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>{{ prompt }}</h1>
+  <h1>{{ question.prompt }}</h1>
 
   <form action="/answer" method="POST">
 
       <!-- you should have one item like this for every choice -->
-      {% for choice in choices %}
+      {% for choice in question.choices %}
       <p>
         <input
             type="radio"
@@ -18,8 +18,8 @@
 
       <input
         type="hidden"
-        name = "question_num"
-        value = "{{question_num}}">
+        name="question_num"
+        value="{{question_num}}">
 
     <button>Continue</button>
   </form>
