--- a/templates/survey_start.html
+++ b/templates/survey_start.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1> {{title}}</h1>
+  <h1> {{survey.title}}</h1> <!--survey.title-->
   <p>
-    {{instructions}}
+    {{survey.instructions}}
   </p>
 
   <!--
